# netbox-proxy-plugin

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: GUIDELINES.md
.github/workflows/: ci.yml  publish.yml
netbox_proxies/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  proxy_router.py  tables.py  urls.py  views.py
netbox_proxy_plugin/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  proxy_router.py  tables.py  urls.py  views.py
netbox_proxy_plugin/api/: serializers.py  urls.py  views.py
netbox_proxy_plugin/migrations/: 0001_initial.py
netbox_proxy_plugin/templates/netbox_proxy_plugin/: proxy.html
