[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-proxies"
version = "0.1.0"
description = "NetBox plugin for managing HTTP proxy configurations"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "thomaschristory"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/thomaschristory/netbox-proxies"
Repository = "https://github.com/thomaschristory/netbox-proxies"
Issues = "https://github.com/thomaschristory/netbox-proxies/issues"
