[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netbox-proxy-plugin"
version = "0.1.0"
description = "NetBox plugin for managing HTTP proxy configurations"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "thomaschristory"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/thomaschristory/netbox-proxy-plugin"
Repository = "https://github.com/thomaschristory/netbox-proxy-plugin"
Issues = "https://github.com/thomaschristory/netbox-proxy-plugin/issues"

[tool.hatch.build.targets.wheel]
packages = ["netbox_proxy_plugin"]

[tool.hatch.build.targets.sdist]
include = ["netbox_proxy_plugin/**", "LICENSE", "README.md"]
